@@ -1,5 +1,9 @@
 2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
 
+	* decode.c: Remove file.
+
+2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
+
 	* libdecnumber/bid/bid-coeffbits.h (bid_required_bits_32): Use
 	__builtin_clz if possible.
 	(bid_required_bits_64): Likewise.
